--- a/src/school/views/school_views.xml
+++ b/src/school/views/school_views.xml
@@ -86,13 +86,13 @@
     <record id="action_schools" model="ir.actions.act_window">
         <field name="name">Schools</field>
         <field name="res_model">school.school</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
     <record id="action_students" model="ir.actions.act_window">
         <field name="name">Students</field>
         <field name="res_model">school.student</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
     <!-- Attach actions to menus -->
