--- a/src/online_food_store/views/food_product_views.xml
+++ b/src/online_food_store/views/food_product_views.xml
@@ -1,44 +1,49 @@
 <odoo>
-    <record id="view_food_product_tree" model="ir.ui.view">
-        <field name="name">food.product.tree</field>
+    <!-- List View -->
+    <record id="view_food_product_list" model="ir.ui.view">
+        <field name="name">food.product.list</field>
         <field name="model">food.product</field>
-        <field name="type">list</field>
         <field name="arch" type="xml">
-            <list string="Food Products">
+            <list string="Food Products" editable="bottom">
                 <field name="name" />
-                <field name="category" />
+                <field name="description" />
                 <field name="price" />
                 <field name="quantity" />
-                <field name="available" />
             </list>
         </field>
     </record>
 
+    <!-- Form View -->
     <record id="view_food_product_form" model="ir.ui.view">
         <field name="name">food.product.form</field>
         <field name="model">food.product</field>
-        <field name="type">form</field>
         <field name="arch" type="xml">
             <form string="Food Product">
                 <sheet>
                     <group>
                         <field name="name" />
-                        <field name="category" />
+                        <field name="description" />
                         <field name="price" />
                         <field name="quantity" />
-                        <field name="available" />
-                    </group>
-                    <group>
-                        <field name="description" />
                     </group>
                 </sheet>
             </form>
         </field>
     </record>
 
+    <!-- Action -->
     <record id="action_food_product" model="ir.actions.act_window">
         <field name="name">Food Products</field>
         <field name="res_model">food.product</field>
         <field name="view_mode">list,form</field>
     </record>
+
+    <!-- Menu -->
+    <menuitem id="menu_food_root" name="Food" />
+    <menuitem
+        id="menu_food_product"
+        name="Products"
+        parent="menu_food_root"
+        action="action_food_product"
+    />
 </odoo>
