--- a/src/gundealership/views/menus.xml
+++ b/src/gundealership/views/menus.xml
@@ -1,21 +1,23 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <menuitem id="menu_gundealership_root" name="Gun Dealership" />
+
     <menuitem
         id="menu_gundealership_gun"
         name="Guns"
         parent="menu_gundealership_root"
-        action="action_gun"
+        action="gundealership.action_gun"
     />
     <menuitem
         id="menu_gundealership_dealer"
         name="Dealers"
         parent="menu_gundealership_root"
-        action="action_dealer"
+        action="gundealership.action_dealer"
     />
     <menuitem
         id="menu_gundealership_customer"
         name="Customers"
         parent="menu_gundealership_root"
-        action="action_customer"
+        action="gundealership.action_customer"
     />
 </odoo>
