--- a/src/gundealership/views/dealer_views.xml
+++ b/src/gundealership/views/dealer_views.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <record id="view_form_dealer" model="ir.ui.view">
         <field name="name">dealer.form</field>
@@ -30,17 +31,17 @@
         <field name="name">dealer.tree</field>
         <field name="model">gun.dealership.dealer</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name" />
                 <field name="country" />
                 <field name="license_no" />
-            </tree>
+            </list>
         </field>
     </record>
 
     <record id="action_dealer" model="ir.actions.act_window">
         <field name="name">Dealers</field>
         <field name="res_model">gun.dealership.dealer</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 </odoo>
