--- a/src/school/views/school_views.xml
+++ b/src/school/views/school_views.xml
@@ -1,7 +1,7 @@
 <odoo>
     <!-- School -->
-    <record id="view_school_tree" model="ir.ui.view">
-        <field name="name">school.school.tree</field>
+    <record id="view_school_list" model="ir.ui.view">
+        <field name="name">school.school.list</field>
         <field name="model">school.school</field>
         <field name="arch" type="xml">
             <list>
@@ -37,8 +37,8 @@
     </record>
 
     <!-- Student -->
-    <record id="view_student_tree" model="ir.ui.view">
-        <field name="name">school.student.tree</field>
+    <record id="view_student_list" model="ir.ui.view">
+        <field name="name">school.student.list</field>
         <field name="model">school.student</field>
         <field name="arch" type="xml">
             <list>
